[0.8.25]
- fixed a bug with the qseq field in the blast tabular format
- added qtitle field to the blast tabular format

[0.8.24]
- error messages when reading sequence files include line numbers

[0.8.23]
- added option to change the genetic code used for translation in blastx mode

[0.8.22]
- the Hit_id and Hit_accession fields are now filled for the BLAST XML format

[0.8.21]
- fixed an error of 'diamond view' when using a custom scoring matrix

[0.8.20]
- added support for customizing the BLAST tabular output format

[0.8.19]
- ungapped xdrop score and ungapped and gapped filter scores are now set in bits
- added support for custom scoring matrices

[0.8.18]
- fixed a crash bug
- implemented getseq command to retrieve sequences from database files

[0.8.17]
- slightly improved sensitivity of fast and sensitive mode
- added new alignment mode (option --more-sensitive)
- the scoring matrix parameter will accept upper case spelling

[0.8.16]
- optimized performance

[0.8.15]
- fixed a compiler error on Mac
- fixed a crash on some systems

[0.8.14]
- fixed a memory leak

[0.8.13]
- fixed a compiler error for GCC 4.1 and 4.2

[0.8.12]
- changed database format
- block size parameter is set only for the alignment commands
- the program will accept databases created by later versions if the format is compatible
- improved sensitivity of sensitive mode with some loss in performance

[0.8.11]
- fixed a compiler error

[0.8.10]
- added option to directly generate all output formats
- fixed some GCC 6.1 compiler errors

[0.8.9]
- optimized performance
- improved local alignment accuracy
- fixed some fields in the XML format

[0.8.8]
- fixed a clang compiler error

[0.8.7]
- added support for BLAST XML format
- fixed the gzip compressed output option

[0.8.6]
- fixed a problem of the Windows version that could cause errors for larger files
- optimized performance

[0.8.5]
- optimized performance

[0.8.4]