@@ -41,7 +41,7 @@ private:
 
 	struct Build_context;
 
-	static void compute_sd(Atomic<unsigned> *seedp, const sorted_list *ref_idx, vector<Sd> *out);
+	static void compute_sd(Atomic<unsigned> *seedp, const sorted_list *ref_idx, const sorted_list *query_idx, vector<Sd> *ref_out, vector<Sd> *query_out);
 
 	PHash_set tables_[Const::max_shapes][Const::seedp];
 
