@@ -27,14 +27,15 @@ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR P
 #  define SET_BINARY_MODE(file)
 #endif
 
-Compressed_istream::Compressed_istream(const string & file_name) :
+Compressed_istream2::Compressed_istream2(const string & file_name) :
 	file_name_(file_name),
 	line_count(0),
 	s_(file_name, std::ios_base::in | std::ios_base::binary),	
 	putback_line_(false)
-{ }
+{
+}
 
-size_t Compressed_istream::read(char * ptr, size_t count)
+size_t Compressed_istream2::read(char * ptr, size_t count)
 {
 	s_.read(ptr, count);
 	const size_t n = s_.gcount();
@@ -47,14 +48,14 @@ size_t Compressed_istream::read(char * ptr, size_t count)
 	return n;
 }
 
-void Compressed_istream::putback(char c)
+void Compressed_istream2::putback(char c)
 {
 	s_.putback(c);
 	if (!s_.good())
 		throw std::runtime_error("Error reading file " + file_name_);
 }
 
-void Compressed_istream::getline()
+void Compressed_istream2::getline()
 {
 	if (!putback_line_) {
 		std::getline(s_, line);
@@ -69,10 +70,86 @@ void Compressed_istream::getline()
 	++line_count;
 }
 
-void Compressed_istream::putback_line()
+void Compressed_istream2::putback_line()
 {
 	putback_line_ = true;
 	--line_count;
+}
+
+Compressed_istream::Compressed_istream(const string &file_name):
+	Input_stream(file_name),
+	in(new char[chunk_size]),
+	out(new char[chunk_size]),
+	read_(0),
+	total_(0),
+	eos_(false)
+{
+	strm.zalloc = Z_NULL;
+	strm.zfree = Z_NULL;
+	strm.opaque = Z_NULL;
+	strm.avail_in = 0;
+	strm.next_in = Z_NULL;
+	strm.avail_out = chunk_size;
+	strm.next_out = (Bytef*)out.get();
+	int ret = inflateInit2(&strm, 15 + 32);
+	if (ret != Z_OK)
+		throw std::runtime_error("Error opening compressed file (inflateInit): " + file_name);
+}
+
+size_t Compressed_istream::read_bytes(char *ptr, size_t count)
+{
+	size_t n = 0;
+	do {
+		size_t m = std::min(count - n, total_ - read_);
+		memcpy(ptr, &out.get()[read_], m);
+		read_ += m;
+		ptr += m;
+		n += m;
+		if (count == n || eos_)
+			return n;
+
+		if (strm.avail_out > 0) {
+			strm.avail_in = (uInt)Input_stream::read_bytes(in.get(), chunk_size);
+			if (strm.avail_in == 0) {
+				eos_ = true;
+				return n;
+			}
+			strm.next_in = (Bytef*)in.get();
+		}
+
+		strm.avail_out = chunk_size;
+		strm.next_out = (Bytef*)out.get();
+
+		int ret = inflate(&strm, Z_NO_FLUSH);
+		if (ret == Z_STREAM_END)
+			eos_ = true;
+		else if (ret != Z_OK)
+			throw std::runtime_error("Inflate error.");
+
+		read_ = 0;
+		total_ = chunk_size - strm.avail_out;
+	} while (true);
+}
+
+void Compressed_istream::close()
+{
+	inflateEnd(&strm);
+	Input_stream::close();
+}
+
+Input_stream *Compressed_istream::auto_detect(const string &file_name)
+{
+	unsigned char b[2];
+	Input_stream f(file_name);
+	size_t n = f.read(b, 2);
+	f.close();
+	if (n == 2 && ((b[0] == 0x1F && b[1] == 0x8B)         // gzip header
+		|| (b[0] == 0x78 && (b[1] == 0x01      // zlib header
+			|| b[1] == 0x9C
+			|| b[1] == 0xDA))))
+		return new Compressed_istream(file_name);
+	else
+		return new Input_stream(file_name);
 }
 
 Compressed_ostream::Compressed_ostream(const string &file_name):
